# neurovisor

./: .env  README.md  hack.json  pyproject.toml  test.py
.devcontainer/: Dockerfile  devcontainer.json  onCreateCommand.sh  updateContentCommand.sh
neurovisor/: __init__.py  neurobayes.py  pipeline.py
neurovisor/backend/: __init__.py
neurovisor/driver/: __init__.py  bamt.py
neurovisor/driver/nextflow/: __init__.py  channel.py  configuration.py  module.py  parsing.py  subworkflow.py
neurovisor/driver/nextflow/parser/: __init__.py  nfcore.py
neurovisor/driver/nextflow/parser/groovy/: parser.py  rules.py
neurovisor/driver/nextflow/parser/groovy/tests/: test_parser.py
neurovisor/driver/nextflow/parser/tests/: test_parsing.py
neurovisor/driver/nextflow/tests/: test_module.py  test_parsing.py
neurovisor/model/: __init__.py  channel.py  command.py  configuration.py  data.py  input.py  internals.py  module.py  output.py  parameter.py  pipeline.py  step.py  subworkflow.py  workflow.py
neurovisor/model/interfaces/: __init__.py  channel.py  command.py  container.py  data.py  input.py  internals.py  output.py  parameter.py  step.py  workflow.py
tests/eddy/: main.nf.lark  main.nf.lark.json  main.nf.lark.result
tests/preproc_dwi/: main.nf.lark  main.nf.lark.json  main.nf.lark.result
