[tool.poetry]
name = "neurovisor"
version = "0.0.1"
description = ""
authors = ["AlexVCaron <alex.valcourt.caron@usherbrooke.ca>"]
readme = "README.md"

packages = [
    { include = "neurovisor" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
nf-core = "^3.0.2"
bamt = "^1.2.0"
networkx = "^3.4.2"
pgmpy = "^0.1.26"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
