[tool.poetry]
name = "neurovisor"
version = "0.0.1"
description = ""
authors = ["AlexVCaron <alex.valcourt.caron@usherbrooke.ca>"]
readme = "README.md"

packages = [
    { include = "neurovisor" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
bamt = "^1.3"
pgmpy = "^1.0"
numpy = "<2.0.0"
nf-core = "^3.2.0"
groovy-parser = "^0.2.1"
pytest-datadir = "^1.6.1"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
